# scope-date-type

./: README.md  pyproject.toml
src/scope_date_type/: __init__.py  pipeline.py  schema.py
src/scope_date_type/effects/: __init__.py  timestruct.py
src/scope_slicer/: pipeline.py  schema.py
