[project]
name = "scope-date-type"
version = "0.1.0"
description = "DATE / TYPE — prompt-driven temporal photography effects for Daydream Scope"
requires-python = ">=3.12"

[project.entry-points."scope"]
scope_date_type = "scope_date_type"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_date_type"]
